istio/deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidate
  labels:
    app: candidate   
spec:
  ports:
  - name: http
    port: 8080
  selector:
    application: candidate
