istio/deployment/deployment.yaml
##################################################################################################
# Candidate service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: candidate
  labels:
    app: candidate
    service: candidate
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: candidate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-v1
  labels:
    app: candidate
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidate
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: candidate
        version: v1
    spec:
      serviceAccountName: sdgdemo-candidate
      containers:
      - name: candidate
        image: maistra/examples-bookinfo-details-v1:1.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
